Added searching of skills, projects and galleries also added galleries to the site. fixed issues with responsive and also added S3 integration.

--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular": "angularjs#^1.6.2",
     "bootstrap": "v4.0.0-alpha.6",
     "typed.js": "^1.1.6",
-    "font-awesome": "fontawesome#^4.7.0"
+    "font-awesome": "fontawesome#^4.7.0",
+    "aws-sdk": "aws-sdk-js#^2.27.0"
   }
 }
